--- a/public/02-masters.html
+++ b/public/02-masters.html
@@ -141,7 +141,7 @@
 								<div class="sFilter__col col-xl-4 col-12 justify-content-md-center">
 									<div class="sFilter__item">
 										<select class="sFilter__select js-example-basic-single" name="state" placeholder="ауауа">
-											<option class="sFilter__option" value="Длина стрижки">Длина стрижки
+											<option class="sFilter__option" value="Длина стрижки" hidden="hidden">Длина стрижки
 											</option>
 											<option class="sFilter__option" value="Короткая">Короткая
 											</option>
@@ -155,7 +155,7 @@
 								<div class="sFilter__col col-xl-4 col-12 justify-content-md-center">
 									<div class="sFilter__item">
 										<select class="sFilter__select js-example-basic-single" name="state" placeholder="ауауа">
-											<option class="sFilter__option" value="Услуга">Услуга
+											<option class="sFilter__option" value="Услуга" hidden="hidden">Услуга
 											</option>
 											<option class="sFilter__option" value="Стрижка">Стрижка
 											</option>
@@ -165,13 +165,13 @@
 								<div class="sFilter__col col-xl-4 col-12 justify-content-md-center">
 									<div class="sFilter__item">
 										<select class="sFilter__select js-example-basic-single" name="state" placeholder="ауауа">
-											<option class="sFilter__option" value="Уровень">Уровень
-											</option>
-											<option class="sFilter__option" value="Начинающий специалист">Начинающий специалист
+											<option class="sFilter__option" value="Уровень" hidden="hidden">Уровень
 											</option>
 											<option class="sFilter__option" value="Мастер">Мастер
 											</option>
 											<option class="sFilter__option" value="Топ-мастер">Топ-мастер
+											</option>
+											<option class="sFilter__option" value="Амбассадор">Амбассадор
 											</option>
 										</select>
 									</div>
