--- a/public/04_6-sbout.html
+++ b/public/04_6-sbout.html
@@ -377,11 +377,11 @@
 					<div class="haircut-help"> 
 						<div class="row"> 
 							<div class="col-12 col-md-6"> 
-								<div class="accardion accardion--js"> 
+								<div class="accardion accardion--js active">
 									<div class="accardion__head accardion__head--js haircut-help-accordion__h">
 										<h5>Помогут ли мне с выбором стрижки?</h5><img class="accardion__i" src="img/svg/arrow-r.svg" alt="" role="presentation"/>
 									</div>
-									<div class="accardion__content accardion__content--js haircut-help-accordion__p">
+									<div class="accardion__content accardion__content--js haircut-help-accordion__p active">
 										<p>От 45 минут до 1 часа. </p>
 									</div>
 								</div>
